# mutter

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  HACKING.md  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  check-style.py  config.h.in  config.h.meson  configure  configure.ac  configure.in  meson.build  meson.options  meson_options.txt  mutter.doap
clutter/: .gitignore  Makefile.in  aclocal.m4  configure  configure.ac  meson.build
clutter/clutter/: Makefile.am  Makefile.in  cally-actor-private.h  cally-actor.c  cally-actor.h  cally-clone.c  cally-clone.h  cally-root.c  cally-root.h  cally-stage.c  cally-stage.h  cally-text.c  cally-text.h  cally-util.c  cally-util.h  clutter-accessibility-private.h  clutter-accessibility.c  clutter-action-private.h  clutter-action.c  clutter-action.h  clutter-actor-accessible.c  clutter-actor-accessible.h  clutter-actor-box-private.h  clutter-actor-box.c  clutter-actor-meta-private.h  clutter-actor-meta.c  clutter-actor-meta.h  clutter-actor-private.h  clutter-actor.c  clutter-actor.h  clutter-align-constraint.c  clutter-align-constraint.h  clutter-animatable.c  clutter-animatable.h  clutter-autocleanups.h  clutter-backend-private.h  clutter-backend.c  clutter-backend.h  clutter-base-types.c  clutter-bezier.c  (+292 more)
clutter/examples/: Makefile.in
clutter/tests/: Makefile.in
cogl/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  cogl-config.h.in  cogl-config.h.meson  configure  configure.ac  meson.build
cogl/cogl/: Makefile.am  Makefile.in  cogl-atlas-private.h  cogl-atlas-texture-private.h  cogl-atlas-texture.c  cogl-atlas-texture.h  cogl-atlas.c  cogl-atlas.h  cogl-attribute-buffer-private.h  cogl-attribute-buffer.c  cogl-attribute-buffer.h  cogl-attribute-private.h  cogl-attribute.c  cogl-attribute.h  cogl-autocleanups.h  cogl-bitmap-conversion.c  cogl-bitmap-packing.h  cogl-bitmap-pixbuf.c  cogl-bitmap-private.h  cogl-bitmap.c  cogl-bitmap.h  cogl-bitmask.c  cogl-bitmask.h  cogl-blend-string.c  cogl-blend-string.h  cogl-blit.c  cogl-blit.h  cogl-boxed-value.c  cogl-boxed-value.h  cogl-buffer-impl-private.h  cogl-buffer-impl.c  cogl-buffer-private.h  cogl-buffer.c  cogl-buffer.h  cogl-clip-stack.c  cogl-clip-stack.h  cogl-closure-list-private.h  cogl-closure-list.c  cogl-color-private.h  cogl-color.c  (+236 more)
cogl/cogl-gles2/: Makefile.am  Makefile.in  libmutter-cogl-gles2.map  meson.build  mutter-cogl-gles2.pc.in
cogl/cogl-pango/: Makefile.am  Makefile.in  cogl-pango-display-list.c  cogl-pango-display-list.h  cogl-pango-fontmap.c  cogl-pango-glyph-cache.c  cogl-pango-glyph-cache.h  cogl-pango-pipeline-cache.c  cogl-pango-pipeline-cache.h  cogl-pango-private.h  cogl-pango-render.c  cogl-pango.h  libmutter-cogl-pango.map  meson.build  mutter-cogl-pango.pc.in
cogl/cogl-path/: Makefile.am  Makefile.in  cogl-path-functions.h  cogl-path-types.h  cogl-path.c  libmutter-cogl-path.map  meson.build  mutter-cogl-path.pc.in
cogl/test-fixtures/: Makefile.in  meson.build  test-utils.c  test-utils.h
cogl/tests/: Makefile.am  Makefile.in  meson.build  run-tests.sh
data/: 50-mutter-navigation.xml  50-mutter-system.xml  61-mutter.rules  LSAN-leaks-suppress.txt  Makefile.in  meson.build  mutter-schemas.convert  org.gnome.Mutter.Mdk.desktop.in.in  org.gnome.mutter.gschema.xml.in  org.gnome.mutter.wayland.gschema.xml.in  uncrustify.cfg
data/dbus-interfaces/: meson.build  org.freedesktop.RealtimeKit1.xml  org.freedesktop.a11y.xml  org.freedesktop.login1.xml  org.gnome.Mutter.Clipboard.xml  org.gnome.Mutter.ColorManager.xml  org.gnome.Mutter.DebugControl.xml  org.gnome.Mutter.Devkit.xml  org.gnome.Mutter.DisplayConfig.xml  org.gnome.Mutter.IdleMonitor.xml  org.gnome.Mutter.InputCapture.xml  org.gnome.Mutter.InputMapping.xml  org.gnome.Mutter.RemoteDesktop.xml  org.gnome.Mutter.ScreenCast.xml  org.gnome.Mutter.ServiceChannel.xml  org.gnome.Mutter.X11.xml  org.gnome.SettingsDaemon.Color.xml
doc/: Makefile.in  building-and-running.md  clutter-frame-scheduling.md  clutter-rendering-model.md  code-overview.md  code-overview.txt  coding-style.md  debugging.md  frame-scheduling.md  git-conventions.md  meson.build  monitor-configuration.md  multi-gpu.md  mutter-docs.sgml  mutter-kms-abstractions.md  mutter-relationships.md  mutter.types
doc/man/: Makefile.in  gdctl.rst  gnome-service-client.rst  meson.build  mutter.1
doc/reference/: Makefile.in  meson.build  meta-docs.sgml  meta.types
mdk/: mdk-content-provider.c  mdk-content-provider.h  mdk-context.c  mdk-context.h  mdk-device.c  mdk-device.h  mdk-devkit.css  mdk-devkit.ui  mdk-ei.c  mdk-ei.h  mdk-input-regions.c  mdk-input-regions.h  mdk-keyboard.c  mdk-keyboard.h  mdk-launcher-action-item.c  mdk-launcher-action-item.h  mdk-launcher-adder.c  mdk-launcher-adder.h  mdk-launcher-adder.ui  mdk-launcher-entry.c  mdk-launcher-entry.h  mdk-launcher-entry.ui  mdk-launcher.c  mdk-launcher.h  mdk-launchers-editor.c  mdk-launchers-editor.h  mdk-launchers-editor.ui  mdk-main-window.c  mdk-main-window.h  mdk-main-window.ui  mdk-main.c  mdk-monitor-info.c  mdk-monitor-info.h  mdk-monitor.c  mdk-monitor.h  mdk-monitor.ui  mdk-pipewire.c  mdk-pipewire.h  mdk-pointer.c  mdk-pointer.h  (+16 more)
mtk/: meson.build
mtk/mtk/: mtk.h  (+22 more)
src/: 50-mutter.rules  Makefile-tests.am  Makefile.am  Makefile.in  libmutter-0.deps  libmutter.map  libmutter.pc.in  meson.build  meta-marshal.list  meta-private-enum-types.c.in  meta-private-enum-types.h.in  mutter-backtrace  mutter-bump-rlimit  mutter-enum-types.c  mutter-enum-types.h  mutter-wayland.desktop.in  mutter-wm.desktop  mutter.desktop  org.freedesktop.login1.xml  org.gnome.Mutter.DisplayConfig.xml  org.gnome.Mutter.Introspect.xml  org.gnome.Mutter.RemoteDesktop.xml  org.gnome.Mutter.ScreenCast.xml  org.gnome.Mutter.WindowList.xml  org.gnome.Mutter.Windowing.xml  org.gnome.Sysprof.Capturer.xml  org.gnome.Sysprof3.Profiler.xml  org.gnome.mutter.backtrace.policy.in  org.gnome.mutter.bump-rlimit.policy.in  org.gnome.mutter.gschema.xml.in  xrandr.xml
tools/: debug-control.py  gdctl  get-state.py  gnome-service-client  meson.build  mutter-profiler  uncrustify.cfg
(+2661 files in other folders)
